src/objects/MUSW__Complaint2__c.object
<CustomObject>
    <description>Cases to track violations</description>
    <fields>
        <fullName>Complainant_Business_City__c</fullName>
        <label>Complainant Business City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Business_County__c</fullName>
        <label>Complainant Business County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adams</fullName>
                </value>
                <value>
                    <fullName>Asotin</fullName>
                </value>
                <value>
                    <fullName>Benton</fullName>
                </value>
                <value>
                    <fullName>Chelan</fullName>
                </value>
                <value>
                    <fullName>Clallam</fullName>
                </value>
                <value>
                    <fullName>Clark</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Cowlitz</fullName>
                </value>
                <value>
                    <fullName>Douglas</fullName>
                </value>
                <value>
                    <fullName>Ferry</fullName>
                </value>
                <value>
                    <fullName>Franklin</fullName>
                </value>
                <value>
                    <fullName>Garfield</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Grays Harbor</fullName>
                </value>
                <value>
                    <fullName>Island</fullName>
                </value>
                <value>
                    <fullName>Jefferson</fullName>
                </value>
                <value>
                    <fullName>King</fullName>
                </value>
                <value>
                    <fullName>Kitsap</fullName>
                </value>
                <value>
                    <fullName>Kittitas</fullName>
                </value>
                <value>
                    <fullName>Klickitat</fullName>
                </value>
                <value>
                    <fullName>Lewis</fullName>
                </value>
                <value>
                    <fullName>Lincoln</fullName>
                </value>
                <value>
                    <fullName>Mason</fullName>
                </value>
                <value>
                    <fullName>Null</fullName>
                </value>
                <value>
                    <fullName>Okanogan</fullName>
                </value>
                <value>
                    <fullName>Out Of Country</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
                <value>
                    <fullName>Pend Oreille</fullName>
                </value>
                <value>
                    <fullName>Pierce</fullName>
                </value>
                <value>
                    <fullName>San Juan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review</label>
        <referenceTo>MUSW__Review__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complainant_Business_Email__c</fullName>
        <description>Complainant Business Email</description>
        <label>Complainant Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Complainant_Business_License_Number__c</fullName>
        <label>Complainant Business License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Business_Mailing_Address__c</fullName>
        <label>Complainant Business Mailing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Business_Name__c</fullName>
        <label>Complainant Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Business_Phone__c</fullName>
        <description>Complainant Business Phone</description>
        <label>Complainant Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Complainant_Business_State__c</fullName>
        <label>Complainant Business State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complainant_City__c</fullName>
        <label>Complainant City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Doing_Business_As__c</fullName>
        <label>Complainant Doing Business As</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Email__c</fullName>
        <label>Complainant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Complainant_First_Name__c</fullName>
        <label>Complainant First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Individual_City__c</fullName>
        <label>Complainant Individual City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Individual_County__c</fullName>
        <label>Complainant Individual County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adams</fullName>
                </value>
                <value>
                    <fullName>Asotin</fullName>
                </value>
                <value>
                    <fullName>Benton</fullName>
                </value>
                <value>
                    <fullName>Chelan</fullName>
                </value>
                <value>
                    <fullName>Clallam</fullName>
                </value>
                <value>
                    <fullName>Clark</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Cowlitz</fullName>
                </value>
                <value>
                    <fullName>Douglas</fullName>
                </value>
                <value>
                    <fullName>Ferry</fullName>
                </value>
                <value>
                    <fullName>Franklin</fullName>
                </value>
                <value>
                    <fullName>Garfield</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Grays Harbor</fullName>
                </value>
                <value>
                    <fullName>Island</fullName>
                </value>
                <value>
                    <fullName>Jefferson</fullName>
                </value>
                <value>
                    <fullName>King</fullName>
                </value>
                <value>
                    <fullName>Kitsap</fullName>
                </value>
                <value>
                    <fullName>Kittitas</fullName>
                </value>
                <value>
                    <fullName>Klickitat</fullName>
                </value>
                <value>
                    <fullName>Lewis</fullName>
                </value>
                <value>
                    <fullName>Lincoln</fullName>
                </value>
                <value>
                    <fullName>Mason</fullName>
                </value>
                <value>
                    <fullName>Null</fullName>
                </value>
                <value>
                    <fullName>Okanogan</fullName>
                </value>
                <value>
                    <fullName>Out Of Country</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
                <value>
                    <fullName>Pend Oreille</fullName>
                </value>
                <value>
                    <fullName>Pierce</fullName>
                </value>
                <value>
                    <fullName>San Juan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complainant_Individual_Email__c</fullName>
        <label>Complainant Individual Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Complainant_Individual_First_Name__c</fullName>
        <label>Complainant Individual First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Individual_Last_Name__c</fullName>
        <label>Complainant Individual Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Individual_License_Number__c</fullName>
        <label>Complainant Individual License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Individual_Mailing_Address__c</fullName>
        <label>Complainant Individual Mailing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Individual_Phone__c</fullName>
        <label>Complainant Individual Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Complainant_Individual_State__c</fullName>
        <label>Complainant Individual State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complainant_Information_Business_Name__c</fullName>
        <label>Complainant Information Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Last_Name__c</fullName>
        <label>Complainant Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Mailing_Address__c</fullName>
        <label>Complainant Mailing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complainant_Phone_Main__c</fullName>
        <label>Complainant Phone (Main)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Complainant_State__c</fullName>
        <label>Complainant State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complainant_Zipcode__c</fullName>
        <label>Complainant Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Submission_Agree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complaint Submission Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__AlertCode__c</fullName>
        <description>Numeric value that determines the alert indicator color.  Updated by AlertParentUpdate trigger on Task object</description>
        <label>Alert Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Indicator__c</fullName>
        <description>Stoplight image displays green (0) yellow (1)  or red (2) depending on the value of the alert code field</description>
        <formula>HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ Id, IMAGE( 
CASE( MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;), 
&quot;none&quot;), &quot;_top&quot;) + IF(MUSW__Parcel__c != null, &quot; Par: &quot; + HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+  MUSW__Parcel__c, IMAGE( 
CASE( MUSW__Parcel__r.MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;), 
&quot;none&quot;), &quot;_top&quot;),&quot;&quot;)</formula>
        <inlineHelpText>Click to view/add/update your alerts</inlineHelpText>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__City__c</fullName>
        <description>If Parcel is selected this value will be filled in via workflow from the Parcel City field</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Closed_Date__c</fullName>
        <description>The date that the complaint was closed on.</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <description>Description of the complaint.</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Geolocation__c</fullName>
        <description>Compound field containing the latitude and longitude for where the inspection is located. Usually copied from the related parcel geolocation field.</description>
        <label>Geolocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Number__c</fullName>
        <description>Filled in when a permanent sequence number is issued. This prevents subsequent triggering of the sequence number code.</description>
        <label>Issued No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Latitude__c</fullName>
        <description>Deprecated upon introduction of salesforce&apos;s geocode format.</description>
        <label>Latitude</label>
        <precision>17</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Longitude__c</fullName>
        <description>Deprecated upon introduction of salesforce&apos;s geocode format.</description>
        <label>Longitude</label>
        <precision>17</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Origin__c</fullName>
        <description>Indicates the channel through which the complaint was received.</description>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Field Observation</fullName>
                    <default>true</default>
                    <label>Field Observation</label>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Police</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Parcel_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated. In environments synched with Assessor data, parcel owners are no longer contacts.</description>
        <inlineHelpText>as indicated on parcel</inlineHelpText>
        <label>Primary Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Complaints as Primary Owner</relationshipLabel>
        <relationshipName>Complaint2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to address record.</description>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaint2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who reported the issue.</description>
        <inlineHelpText>Reported By</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>PrimaryComplaint2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Priority__c</fullName>
        <description>Can be configured to be reflected on an inspection to assist with inspection assignments.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the project object.</description>
        <label>Project</label>
        <referenceTo>MUSW__Project2__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaint2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__State__c</fullName>
        <description>This field cannot be filled in via workflow. Should be set to default to the local state.</description>
        <label>State/ Prov.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <description>Current disposition of the complaint visible to respondent (person who has requested the case).</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Intake</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Street__c</fullName>
        <description>If Parcel is selected this value will be filled in via workflow from the Parcel Address field</description>
        <externalId>true</externalId>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Subject__c</fullName>
        <description>Deprecated</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Balance__c</fullName>
        <description>Formula field that calculates the difference between Total Fees and Total Payments.</description>
        <formula>MUSW__Total_Fees__c - MUSW__Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Fees__c</fullName>
        <description>Summary of the Amount field less the Waived Amount of all fees related to this record.</description>
        <inlineHelpText>Automatically Refreshed after Fee updates</inlineHelpText>
        <label>Total Fees</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Payments__c</fullName>
        <description>Summary of all Amount field of all Payments related to this record.</description>
        <inlineHelpText>Automatically Refreshed after Payment updates</inlineHelpText>
        <label>Total Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <description>Classification of the complaint to determine what department or role the case could be escalated to.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fire and Life Safety</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Unit__c</fullName>
        <description>Allows the user to specify an individual unit in a multiunit building or address.</description>
        <label>Unit</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Zip__c</fullName>
        <description>If Parcel is selected this value will be filled in via workflow from the Parcel Post/Zip Code field.</description>
        <label>Zip/ Post Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parcel_Owner_Formula__c</fullName>
        <formula>MUSW__Parcel__r.MUSW__Assessor_Owner_Name__c</formula>
        <label>Address Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <formula>MUSW__Parcel__r.MUSW__Assessor_Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessibility</fullName>
                </value>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Complaint</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>